# miam

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  environment.yaml
.github/design/: cam_cloud_chemistry_miam_design.md  henry_law_phase_transfer.md  notes_on_cam_cloud_chem.md
.github/workflows/: clang-format.yaml  docker_and_coverage.yaml  gh_pages.yaml  gh_pages.yaml.disabled  mac.yaml  mac.yml  ubuntu.yaml  windows.yaml  windows.yml
branch/main/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
branch/main/.doctrees/: environment.pickle  index.doctree
branch/main/.doctrees/api_reference/: index.doctree  model.doctree  processes.doctree  representations.doctree  utilities.doctree
branch/main/.doctrees/developer_guide/: adding_a_process.doctree  adding_a_representation.doctree  testing.doctree
branch/main/.doctrees/getting_started/: installation.doctree  quickstart.doctree
branch/main/.doctrees/science_guide/: dissolved_reversible_reaction.doctree  henry_law_phase_transfer.doctree  size_distributions.doctree
branch/main/.doctrees/user_guide/: aerosol_properties.doctree  building_a_model.doctree  concepts.doctree  processes.doctree  representations.doctree
branch/main/_sources/api_reference/: model.rst  processes.rst
branch/main/_sources/developer_guide/: adding_a_process.rst  adding_a_representation.rst
branch/main/_sources/user_guide/: representations.rst
branch/main/api_reference/: index.html  model.html  processes.html  representations.html  utilities.html
branch/main/developer_guide/: adding_a_process.html  adding_a_representation.html  testing.html
branch/main/getting_started/: installation.html  quickstart.html
branch/main/science_guide/: dissolved_reversible_reaction.html  henry_law_phase_transfer.html  size_distributions.html
branch/main/user_guide/: aerosol_properties.html  building_a_model.html  concepts.html  processes.html  representations.html
cmake/: CodeCoverage.cmake  FindSphinx.cmake  dependencies.cmake  test_util.cmake
docker/: Dockerfile  Dockerfile.coverage  Dockerfile.docs  Dockerfile.intel  Dockerfile.memcheck  Dockerfile.nvhpc
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api_reference/: index.rst  utilities.rst
docs/source/developer_guide/: adding_a_process.rst  adding_a_representation.rst  testing.rst
docs/source/getting_started/: quickstart.rst
docs/source/science_guide/: dissolved_reversible_reaction.rst
docs/source/user_guide/: aerosol_properties.rst  debugging_dae_systems.rst  processes.rst  representations.rst
docs/src/: conf.py  index.rst
docs/src/_static/: switcher.json
docs/src/api_reference/: processes.rst  representations.rst  utilities.rst
docs/src/developer_guide/: testing.rst
docs/src/getting_started/: installation.rst  quickstart.rst
docs/src/science_guide/: henry_law_phase_transfer.rst  size_distributions.rst
docs/src/user_guide/: building_a_model.rst  concepts.rst  debugging_dae_systems.rst  processes.rst
include/miam/: aerosol_property.hpp  constraint.hpp  distribution.hpp  miam.hpp  model.hpp  moment.hpp  process.hpp  process_set.hpp  processes.hpp  representation.hpp  representations.hpp  shape.hpp  version.hpp
include/miam/constraints/: dissolved_equilibrium_constraint.hpp  dissolved_equilibrium_constraint_builder.hpp  henry_law_equilibrium_constraint.hpp  henry_law_equilibrium_constraint_builder.hpp  linear_constraint.hpp  linear_constraint_builder.hpp
include/miam/math/: condensation_rate.hpp
include/miam/model/: aerosol_model.hpp  aerosol_scheme.hpp  gas_model.hpp  mode.hpp  model.hpp  section.hpp
include/miam/moments/: single.hpp  two.hpp
include/miam/processes/: dissolved_reaction.hpp  dissolved_reaction_builder.hpp  dissolved_reversible_reaction.hpp  dissolved_reversible_reaction_builder.hpp  equilibrium_constant.hpp  henry_law_phase_transfer.hpp  henry_law_phase_transfer_builder.hpp  process_set.hpp
include/miam/processes/constants/: arrhenius_rate_constant.hpp  equilibrium_constant.hpp  henry_law_constant.hpp  henrys_law_constant.hpp  vant_hoff.hpp
include/miam/representations/: single_moment_mode.hpp  two_moment_mode.hpp  uniform_section.hpp
include/miam/shapes/: delta_function.hpp  log_normal.hpp
include/miam/util/: condensation_rate.hpp  constants.hpp  error.hpp  miam_exception.hpp  print.hpp  solver_utils.hpp  utils.hpp  uuid.hpp
packaging/: CMakeLists.txt
src/: CMakeLists.txt  stub.cpp  version.hpp.in
src/model/: CMakeLists.txt  aerosol_scheme.cpp  mode.cpp
src/util/: CMakeLists.txt  print.cpp  solver_utils.cpp  utils.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  test_aqueous_carbonic_acid.cpp  test_cam_cloud_chemistry.cpp  test_dissolved_reaction.cpp  test_dissolved_reversible_reaction.cpp  test_equilibrium_constraints.cpp  test_henry_law_equilibrium_constraint.cpp  test_henry_law_phase_transfer.cpp  test_jacobian_verification.cpp  test_kinetic_vs_constrained.cpp  test_miam.cpp  test_miam_api.cpp  test_readme_example.cpp  test_solvent_robustness.cpp
test/integration/configs/: cam_cloud_chemistry.json
test/unit/: CMakeLists.txt  aerosol_property.cpp  condensation_rate.cpp  distribution.cpp  micm_model_policy.hpp  model.cpp  process_set.cpp  representation_policy.hpp
test/unit/constraints/: CMakeLists.txt  dissolved_equilibrium_constraint.cpp  henry_law_equilibrium_constraint.cpp  linear_constraint.cpp
test/unit/moments/: CMakeLists.txt  policy.hpp  single.cpp  two.cpp
test/unit/processes/: CMakeLists.txt  dissolved_reaction.cpp  dissolved_reversible_reaction.cpp  henry_law_constant.cpp  henry_law_phase_transfer.cpp  henrys_law_constant.cpp
test/unit/representations/: CMakeLists.txt  single_moment_mode.cpp  two_moment_mode.cpp  uniform_section.cpp
test/util/: CMakeLists.txt  test_print.cpp
